--- a/src/views/main/CSS/about.css
+++ b/src/views/main/CSS/about.css
@@ -74,3 +74,10 @@ width: 100%;
     font-size: 5rem;
     margin-left: -10px;
 }
+.aboutContent,.aboutContent2,.aboutContent1 p{
+    text-align: center;
+    font-size: 1.3rem;
+    font-weight: 400;
+    color: rgb(0, 0, 0);
+    line-height: 1.5;
+}
