--- a/src/assets/css/quiz.css
+++ b/src/assets/css/quiz.css
@@ -15,3 +15,57 @@
     position: relative;
     margin-left: 40px;
 }
+.question{
+    background-color: white;
+    box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
+    width: 60%;
+    margin: 0 auto;
+    padding: 20px;
+    margin-top: 20px;
+    border-radius: 10px;
+
+}
+.question__title{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.options{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+#option1, #option2, #option3, #option4{
+    margin-right: 20px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+.quizBottom{
+    z-index: 1;
+    background-color: white;
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    bottom: 0;
+}
+.button-61{
+    background-color: #f5f5f5;
+    color: #000;
+    border: 1px solid #000;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: 600;
+    transition: all 0.4s ease;
+    position: relative;
+    top: 30px;
+    left: 70%;
+    cursor: pointer;
+    margin-right: 20px;
+}
+.button-61:hover{
+    background-color: #3f55ea;
+    color: #fff;
+    border-color: #3f55ea;
+}
