--- a/src/assets/css/signUp.css
+++ b/src/assets/css/signUp.css
@@ -1,5 +1,7 @@
 .signup{
     width: 40% !important;
+    /* background-color: white; */
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .loginInput  {
     background: #ffffff;
