--- a/src/assets/css/quiz.css
+++ b/src/assets/css/quiz.css
@@ -49,6 +49,13 @@
     position: fixed;
     bottom: 0;
 }
+.quizBottom h1{
+    position: relative;
+    top: 30px;
+    left: 20px;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
 .button-61{
     background-color: #f5f5f5;
     color: #000;
@@ -59,7 +66,6 @@
     font-weight: 600;
     transition: all 0.4s ease;
     position: relative;
-    top: 30px;
     left: 70%;
     cursor: pointer;
     margin-right: 20px;
@@ -68,4 +74,29 @@
     background-color: #3f55ea;
     color: #fff;
     border-color: #3f55ea;
+}
+.submitCard{
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    margin-top: 20px;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
+
+}
+.submitCard h1{
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.textGreen{
+    color: rgb(18, 224, 90);
+}
+.textRed{
+    color: rgb(224, 52, 18);
+}
+.result{
+    font-size: 2.5rem !important;
+    font-weight: 600;
 }
