--- a/src/assets/css/quiz.css
+++ b/src/assets/css/quiz.css
@@ -77,6 +77,7 @@
 }
 .submitCard{
     width: 80%;
+    position: relative;
     margin: 0 auto;
     padding: 20px;
     margin-top: 20px;
@@ -97,6 +98,20 @@
     color: rgb(224, 52, 18);
 }
 .result{
-    font-size: 2.5rem !important;
+    font-size: 1.5rem !important;
     font-weight: 600;
+}
+.submitName{
+    position: absolute;
+    left: 60%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    font-size: 3rem !important;
+}
+.level{
+    position: absolute;
+    left: 60%;
+    top: 65%;
+    transform: translate(-50%,-50%);
+    font-size: 1rem !important;
 }
