--- a/src/views/main/CSS/Navbar.css
+++ b/src/views/main/CSS/Navbar.css
@@ -82,7 +82,7 @@
   margin-top: 18px;
 }
 
-nav {
+.nav {
   position: absolute;
   top: 0;
   width: 100%;
@@ -94,15 +94,15 @@ nav {
   z-index: 100;
 }
 
-nav ul {
+.nav ul {
   list-style: none;
 }
 
-nav ul li {
+.nav ul li {
   margin: 50px 0;
 }
 
-nav ul li a {
+.nav ul li a {
   color: #fafafa;
   font-size: 2em;
   font-family: "Josefin Sans", sans-serif;
@@ -120,7 +120,7 @@ nav ul li a {
 .navImgOpen{
     opacity: 1;
 }
-nav ul li a:after {
+.nav ul li a:after {
   content: "";
   content: "";
   width: 100%;
@@ -135,18 +135,18 @@ nav ul li a:after {
   transform: scaleX(0);
 }
 
-nav ul li a:hover:after {
+.nav ul li a:hover:after {
   transform: scaleX(1);
 }
 
-nav .close {
+.nav .close {
   width: 100%;
   height: 100vh;
   cursor: pointer;
   opacity: 0;
   pointer-events: none;
 }
-nav .close div{
+.nav .close div{
   position: absolute;
   top: 7%;
   right: 14%;
@@ -155,8 +155,8 @@ nav .close div{
 
 
 
-nav .close div::before,
-nav .close div::after {
+.nav .close div::before,
+.nav .close div::after {
   content: "";
   position: absolute;
   width: 30px;
@@ -164,16 +164,16 @@ nav .close div::after {
   background: #fff;
   transition: background 0.5s ease;
 }
-nav .close div::before {
+.nav .close div::before {
   transform: rotate(-45deg);
 }
 
-nav .close div::after {
+.nav .close div::after {
   transform: rotate(45deg);
 }
 
-nav .close:hover div::before,
-nav .close:hover div::after {
+.nav .close:hover div::before,
+.nav .close:hover div::after {
   background: rgb(209, 3, 3);
 }
 
@@ -201,10 +201,10 @@ nav .close:hover div::after {
   height: 65px;
 }
 @media (max-width: 992px) {
-  nav h1 {
+  .nav h1 {
     font-size: 25px;
   }
-  nav .close {
+  .nav .close {
     right: 9%;
   }
   .container {
