--- a/src/assets/css/userProfile.css
+++ b/src/assets/css/userProfile.css
@@ -1,5 +1,6 @@
 .userDetail{
-
+    padding: 10px;
+    height: 55vh;
     background-color: white;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
