--- a/src/assets/css/resume.css
+++ b/src/assets/css/resume.css
@@ -1,5 +1,5 @@
 .userDetail{
-
+    height: 100% !important;
     background-color: white;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
